# rust-learning

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: general.yml
.sqlx/: query-07afad9bc24769406c8f7e29d193e1b7d8335bc46102e37f308cd5e09d85ba3a.json  query-133aad4cc35dd3c4b70ce0c25658402659885d3e1f9bd4b73f25647a515dc937.json  query-2a29c528f645bfb0e72b6d22e0f1e407ba67c811eb4eb13d3d37f7022e3b0541.json  query-319240796ce40269ca91255620f1b1cd75e913de309bc4c4fd6b34e477608fef.json  query-43bfb867e1dd7ebe9f615de2497926bf926ff4d8b45c472235a8e9dc773ff758.json  query-7408194dde5d6400cc46791c5e0b6f03db28b6173025c9252ac6e4ca1af14265.json  query-93e0bf1817a9a72fedb59ac122947cb26393cd6aa4fb749785546d9562ae9fb1.json  query-a4c65dfa59c76597d2144cba7aa757a7e2369c822223dc79ff77e217f10d3e9a.json  query-bc7da5c0efd0d5b2edfc3d981f896ea587b39c15045db6e3f095e7944e9c386c.json  query-c07bde84e28d048f0c6228232852f01fa455f946513b2c9643f32e4a31d61371.json  query-cedd8424fd01a58eda5aad4ada8300d5b06c7e85f0b382f37836e4dada818e99.json  query-e1ec396e3e30ec9b7c564193f733015b44b1be72ee707c0052661ad705c19936.json
configuration/: base.yml  production.yml
migrations/: 20250615122243_make_status_not_null_in_subscriptions.sql  20250629153406_seed_user.sql  20250706090850_create_idempotency_table.sql
scripts/: drop-tests-db.sh  init_db.sh  init_redis.sh  set_database_url.ps1
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs  newsletters.rs  password.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
