[package]
name = "learning"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "learning"

[dependencies]
actix-web = "4"
actix-rt = "2.10.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
log = "0.4.27"
tracing = {  version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
config = "0.15.11"
once_cell = "1.21.3"
tracing-actix-web = "0.7.18"
serde-aux = "4.7.0"
secrecy = { version = "0.8", features = ["serde"]}
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.14.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.9.1", features = ["std_rng"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
base64 = "0.22.1"
argon2 = { version = "0.6.0-rc.0", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session-native-tls"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version="0.8.6"
default-features = false
features = ["runtime-tokio-rustls",
    "macros",
"postgres",
"uuid",
"chrono",
"migrate"]


[dev-dependencies]
tokio = {version = "1.45.1", features = ["rt", "macros"]}
wiremock = "0.6.3"
serde_json = "1.0.140"
linkify = "0.10.0"